Fix wrapping issues

--- a/src/grid/row.scss
+++ b/src/grid/row.scss
@@ -49,7 +49,6 @@ $fractions: (
 
   @include variant.declare(mode, thin) {
     display: flex;
-    flex-wrap: nowrap;
 
     @include child-cell {
       @include mode.thin;
@@ -66,6 +65,22 @@ $fractions: (
 
   @include variant.declare(mode, disabled) {
     display: none;
+  }
+
+  @include variant.declare(flow, wrap) {
+    flex-wrap: wrap;
+
+    @include child-cell {
+      white-space: normal;
+    }
+  }
+
+  @include variant.declare(flow, keep) {
+    flex-wrap: nowrap;
+
+    @include child-cell {
+      white-space: nowrap;
+    }
   }
 
   @include mode.frac($fractions) using ($value, $cell-width) {
